--- a/index.html
+++ b/index.html
@@ -22,6 +22,13 @@
         </nav>
       </header>
       <main>
+        <div class="left_sidebar">
+          <ul>
+              <li><a href="#">Link 1</a></li>
+              <li><a href="#">Link 3</a></li>
+              <li><a href="#">Link 3</a></li>
+          </ul>
+      </div>
         <section>
           <h2>Welcome</h2>
           <p>
@@ -34,13 +41,14 @@
             />
           </p>
           <p>
+            <img src="images/300x200.jpg" alt="" class="left-float">
             Any budding web designer or web developers needs to grasp the
             concept of the 'big' three. These are the core open standard skills
             that will enable to build beautiful looking, dynamic web pages as
             well as mobile applications.
           </p>
           <p>
-            <img src="images/300x200.jpg" alt="" class="left-float" />Lorem
+            Lorem
             ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
             tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim
             veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex
@@ -59,7 +67,7 @@
             culpa qui officia deserunt mollit anim id est laborumste.
           </p>
         </section>
-        <div class="sidebar">
+        <div class="right_sidebar">
           <p><img src="images/square200px.png" alt="Profile Picture" /></p>
           <h2>Contact Details</h2>
           <address>My Address</address>
